--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -10,12 +10,12 @@
 a:link { color: black}
 a:visited {color: black}
 a:active {color: black}
-a:hover { color: red; opacity: 0.7;}
+a:hover { color: red; opacity: 0.7; }
 a:focus { color: red}
 
 /* class selector and grouped selector*/
 h1, h3 { 
-	color:#f00; font-family: "Roboto Thin", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+	color:#f00; font-family: "Myriad Pro", "Gill Sans MT", "Roboto Thin", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
 	
 }
 
@@ -29,26 +29,41 @@ h1, h3 {
 /*line height is usually specified in percentage*/
 .line_spc_incr{line-height: 150%}
 
-.sq_bracket {list-style-type: armenian;}
+.sq_bracket {}
 .medium_title{font-size: 20px}
 .yellow_color{background-color: #FFAE00; padding: 20px 20px;}
 .alphabetList {list-style-type: upper-alpha;}
 
 /*snippet text decor can remove underline under links*/
-a {		background-color: white;
+#navigation a {		
+	    background-color: white;
 		display: inline;
 		padding: 5px 10px;
 		text-decoration: none;
 		font-weight: bold;
               	}
 
+body { }
+
 
 /* id selector : apply 4 values to padding to customzie top right bottom left; 2 values
    specify vertical and horizontal spacings*/
-#navigation {text-align: center; padding: 20px 20px; background-color: orange}
-#social_media { background-color:white;
-				padding: 5px 5px;}
+#navigation {text-align: center; padding: 20px 20px; background-color: white;
+             }
+#social_media { background-color:orange;
+				padding: 2px 5px;}
 #bg_image {	margin-left: 70px}
 
+/*the auto keyword centers webpage horizontally*/
 #wrapper{ width: 900px; margin: 20px auto;}
+#name {float: left; width: 400px; margin-left: 50px; margin-top: auto; 
+	font: "Myriad Pro", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+	font-size: 30px;}
+
+/*#BIO {background-color:  red;
+		padding: 10px 40px;
+		text-align: center;}
+#BIO h3 { color: orange;}
+#BIO p { color:white;}
+*/
 
