--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,8 +3,14 @@
     
 }
 
+/*body {*/
+    /*width: 900px;*/
+    /*margin: auto;*/
+/*}*/
 
 #bg {
+    max-width: 50%;
+	width: 50%;
 	float: right;
     /*height: 70rem;*/
     /*background-image: url("cover3.jpg");*/
@@ -37,11 +43,19 @@
 #nav a:hover { color: orange; opacity: 0.7; }
 #nav a:focus { color: orange;}
 
-#intro {
+#main{
 	width: 50%;
+	max-width: 50%;
 	margin-right: 60%;
-    margin-top: 18%;
+	margin-top: 14%;
 	margin-left: 18%;
+}
+
+#intro {
+	/*width: 50%;*/
+	/*margin-right: 60%;*/
+    /*margin-top: 14%;*/
+	/*margin-left: 18%;*/
 }
 
 #intro h1 {
@@ -62,16 +76,17 @@
 }
 
 #footer {
-    margin-top: 28%;
+    margin-top: 32%;
 }
 
 #social_media {
-	margin-top: 3%;
-	margin-left: 15%;
+	margin-top: 6%;
+	margin-left: -7%;
+
 }
 
 #social_media a {
-	padding: 0 10px;
+	padding: 0 1.68%;
 }
 
 #social_media a:hover {
