--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -61,9 +61,9 @@ body {
 }
 
 #intro h2{
-    font-size: 35px;
+    font-size: 40px;
     margin-left: 3%;
-    font-family: "Roboto Thin", "Helvetica","serif";
+    font-family: "SF UI Display","Roboto Thin", "Helvetica","serif";
     line-height: 70%;
 }
 
