Added Featured Projects in Index

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -71,7 +71,8 @@ body {
 }
 
 #footer {
-    margin-top: 32%;
+    margin-top: 2%;
+    /*use to be 32%*/
 }
 
 #social_media {
@@ -87,3 +88,37 @@ body {
 #social_media a:hover {
     /*opacity:0.7;*/
 }
+
+#contents {
+    /*background-color: rgba(0,0,0,0.06);*/
+    background-color: black;
+    margin-top: 31%;
+    text-align: center;
+    padding: 3% 0;
+}
+
+#contents h1 {
+    /*font-family: "Helvetica", "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";*/
+    font-family: -apple-system, BlinkMacSystemFont,"Roboto", sans-serif;
+    color:white;
+    font-weight: 300;
+    font-size: 45px;
+    line-height: 70%;
+}
+
+#first{
+    padding-left: 3%;
+}
+
+#contents a {
+    padding-top: 2%;
+    padding-right: 3%;
+    display: inline;
+}
+
+#contents #images{
+    padding-top: 2.3%;
+    padding-bottom: 2%;
+}
+
+/*#contents a:hover {opacity: 0.7;}*/
