--- a/CSS/contacts_css.css
+++ b/CSS/contacts_css.css
@@ -13,6 +13,10 @@ body {
     text-align: center;
     background-color: black;
     padding: 15px 0 15px 0;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
 }
 
 #nav a {
@@ -35,7 +39,7 @@ body {
 }
 
 #title_ h1 {
-    padding: 10% 0;
+    padding: 14% 0 10% 0;
     text-decoration: none;
     font-family: -apple-system, BlinkMacSystemFont,"Roboto", sans-serif;
     font-weight: 300;
