--- a/CSS/resume_css.css
+++ b/CSS/resume_css.css
@@ -13,6 +13,10 @@ body {
     text-align: center;
     background-color: black;
     padding: 15px 0 15px 0;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
 }
 
 #nav a {
