--- a/CSS/gfx2.css
+++ b/CSS/gfx2.css
@@ -48,29 +48,6 @@ body {
     background-size: 100% auto;
 }
 
-#behance {
-    /*float: right;*/
-    margin-top: -30.2%;
-    margin-left : 70%;
-    padding: 12% 7%;
-    text-align: center;
-    background-color: rgba(19,119,255,1);
-}
-
-/*#behance a {*/
-    /*text-decoration: none;*/
-    /*font-family: -apple-system, BlinkMacSystemFont,"Roboto", sans-serif;*/
-    /*font-weight: 300;*/
-    /*font-size: 30px;*/
-/*}*/
-
-/*#behance a:link {color: white}*/
-/*#behance a:visited {color: white}*/
-/*#behance a:hover {*/
-    /*color: white;*/
-    /*text-decoration: underline;*/
-/*}*/
-
 #work{
     text-align: center;
     padding: 1% 0;
@@ -83,36 +60,65 @@ body {
 }
 
 #design {
+    display: flex;
     margin: 0 6% 5% 6%;
     background-size: 100% auto;
 }
 
-/*#design #img1{*/
-    /*text-align: center;*/
-    /*background-size: 100% auto;*/
-    /*padding: 10% 0;*/
-    /*background-image: url("../images/gfx1.jpg");*/
-    /*!*cursor: pointer;*!*/
-/*}*/
-
-#design #img2{
-    float: left;
-    /*background-size: 40% auto;*/
-    /*padding: 18.7% 40%;*/
-    margin: 3% 0 0 0;
-    /*background-image: url("../images/gfx2.png");*/
+#img1x{
+    -ms-transform: scale(0.695, 0.695); /* IE 9 */
+    -webkit-transform: scale(0.695, 0.695); /* Safari */
+    transform: scale(0.695, 0.695);
 }
 
-#design #img3{
-    position: static;
-    margin: 3% 0 0 36%;
+#col1, #col2 {
+    width: 420px;
+    margin-right: 2.87%;
 }
 
-#design #flickr{
-    margin: 3.6% 0 0 4.18%;
-    padding: 12% 8.9%;
-    background-color: rgba(255,0,128,1) ;
+#col3{
+
+}
+
+#design img{
     float: left;
+}
+
+#footer{
+    margin-top: 5%;
+}
+
+.imgContainer{
+    float:left;
+}
+
+.blur {
+    transition: all .25s ease-out;
+    -webkit-filter: blur(5px);
+    filter: blur(5px);
+    /*opacity: 0.5;*/
+}
+
+#img1{
+    margin-bottom: 8%;
+}
+
+#img2{
+    margin-bottom: 8%;
+    /*margin: 0 2.87% 2.87% 0;*/
+}
+
+#img3{
+    margin-bottom: 8%;
+    /*margin: 0 0 2.87% 0;*/
+}
+
+.shadow{
+    text-shadow: 3px 3px 2px rgba(0,0,0,1);
+}
+
+#behance{
+
 }
 
 #design a{
@@ -129,65 +135,62 @@ body {
     text-decoration: underline;
 }
 
-#footer{
-    margin-top: 28%;
-}
-
-.blur {
-    transition: all .25s ease-out;
-    -webkit-filter: blur(5px);
-    filter: blur(5px);
-    /*opacity: 0.5;*/
-}
-
-#img1x{
-    position: relative;
-    margin:  -6.5% 0 -5.5% -18%;
-    -ms-transform: scale(0.695, 0.695); /* IE 9 */
-    -webkit-transform: scale(0.695, 0.695); /* Safari */
-    transform: scale(0.695, 0.695);
-  }
-
-#design #img1x a {
-    font-size: 40px;
+#behance a {
+    font-size: 35px;
     position: absolute;
-    left: 40%;
-    top: 40%;
+    left: 39.5%;
+    top: 200%;
     padding: 10px;
     color: #FFF;
     margin: 5px;
 }
 
-#img2{
-    position: relative;
+#flickr a {
+    font-size: 35px;
+    position: absolute;
+    left: 73%;
+    top: 195%;
+    padding: 10px;
+    color: #FFF;
+    margin: 5px;
+}
+
+#img1 a {
+    font-size: 25px;
+    position: absolute;
+    left: 12%;
+    top: 127%;
+    padding: 10px;
+    color: #FFF;
+    margin: 5px;
 }
 
 #img2 a {
     font-size: 40px;
     position: absolute;
-    left: 23%;
-    top: 35%;
+    left: 42%;
+    top: 137%;
     padding: 10px;
     color: #FFF;
     margin: 5px;
 }
 
-#img3{
-    position: relative;
+#img4 a {
+    font-size: 40px;
+    position: absolute;
+    left: 9%;
+    top: 195%;
+    padding: 10px;
+    color: #FFF;
+    margin: 5px;
 }
 
 #img3 a {
     font-size: 40px;
     position: absolute;
-    left: 43%;
-    top: 193%;
+    left: 72.5%;
+    top: 133%;
     padding: 10px;
     color: #FFF;
     margin: 5px;
 }
-
-.shadow{
-    text-shadow: 3px 3px 2px rgba(0,0,0,1);
-}
-
-
