Changed img1 Styling to Pixels (graphic design page)

--- a/CSS/gfx2.css
+++ b/CSS/gfx2.css
@@ -158,8 +158,8 @@ body {
 #img1 a {
     font-size: 25px;
     position: absolute;
-    left: 12%;
-    top: 127%;
+    left: 180px;
+    top: 930px;
     padding: 10px;
     color: #FFF;
     margin: 5px;
