--- a/CSS/gfx2.css
+++ b/CSS/gfx2.css
@@ -93,7 +93,7 @@ body {
 }
 
 .blur {
-    transition: all .25s ease-out;
+    transition: all .25s ease-in-out;
     -webkit-filter: blur(5px);
     filter: blur(5px);
     /*opacity: 0.5;*/
