--- a/CSS/styles2.css
+++ b/CSS/styles2.css
@@ -65,7 +65,6 @@ body {
 #intro h2{
     font-size: 40px;
     margin-left: 3%;
-    /*font-family: "SF UI Display","Roboto Thin", "Helvetica Thin","serif";*/
     font-family: -apple-system, BlinkMacSystemFont,"Roboto", sans-serif;
     font-weight: 300;
     line-height: 70%;
@@ -96,14 +95,12 @@ body {
 
 #contents {
     background-color: rgba(0,0,0,0.04);
-    /*background-color: black;*/
     margin-top: 31%;
     text-align: center;
     padding: 3% 0;
 }
 
 #contents h1 {
-    /*font-family: "Helvetica", "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";*/
     font-family: -apple-system, BlinkMacSystemFont,"Roboto", sans-serif;
     color:black;
     font-weight: 300;
@@ -141,7 +138,8 @@ body {
 
 #proj{
     padding: 20% 0;
-    background-image: url("../images/FRC.jpg");
+    /*background-image: url("../images/FRC.jpg");*/
+    background-image: url("indexbg2.jpg");
     background-size: 120%;
     text-align: center;
     background-position: 50% 18%;
