Image Prob May Be Solved

--- a/CSS/gfx2.css
+++ b/CSS/gfx2.css
@@ -44,7 +44,7 @@ body {
 #showcase{
     margin-top: 3.38%;
     padding: 22.5% 0;
-    background-image: url("../images/gfxbg2.png");
+    background-image: url("../Images/gfxbg2.png");
     background-size: 100% auto;
 }
 
