--- a/CSS/styles2.css
+++ b/CSS/styles2.css
@@ -148,7 +148,7 @@ body {
 
 #resume{
     padding: 20% 0;
-    background-image: url("../images/indexbg3.jpg");
+    background-image: url("../Images/indexbg3.jpg");
     /*background-size: 120%;*/
     text-align: center;
     background-position: 50% 18%;
